--- a/kompact/Cargo.toml
+++ b/kompact/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 #kompact 				= { git = "https://github.com/kompics/kompact"}
 kompact 				= { git = "https://github.com/kompics/kompact", rev = "94956af" }
 #omnipaxos             = { path = "../../omnipaxos", features = ["batch_accept"] }
-omnipaxos               = { git = "https://github.com/haraldng/omnipaxos", branch = "kompicsbenches-exp", features = ["batch_accept"] }
+#omnipaxos               = { git = "https://github.com/haraldng/omnipaxos", branch = "kompicsbenches-exp", features = ["batch_accept"] }
+omnipaxos_core          = { git = "https://github.com/haraldng/omnipaxos" }
 benchmark_suite_shared 	= { path = "../shared_rust/" }
 protobuf        		= "2"
 futures         		= "0.1"
@@ -31,6 +32,8 @@ hdrhistogram            = "6.0"
 hocon 					= {version = "0.3.6", default-features = false}
 quanta                  = "0.7.2"
 pretty-bytes            = {version = "0.2.2", optional = true}
+serde                   = { version = "1.0", features = ["derive"] }
+bincode                 = "1.3.3"
 
 [dev-dependencies]
 uuid = { version = "0.8", features = ["v4"] }
