--- a/kompact/Cargo.toml
+++ b/kompact/Cargo.toml
@@ -54,4 +54,4 @@ periodic_client_logging = []
 periodic_replica_logging = []
 simulate_partition = [] # simulate livelock and deadlock scenarios
 
-default = ["use_pid_map", "simulate_partition"]
+default = []
