--- a/kompact/Cargo.toml
+++ b/kompact/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2018"
 [dependencies]
 #kompact 				= { git = "https://github.com/kompics/kompact"}
 kompact 				= { git = "https://github.com/kompics/kompact", rev = "94956af" }
-#omnipaxos_core          = { path = "../../omnipaxos/omnipaxos_core", features = ["batch_accept"] }
+omnipaxos_core          = { path = "../omnipaxos/omnipaxos_core", features = ["batch_accept"] }
 #omnipaxos              = { git = "https://github.com/haraldng/omnipaxos", branch = "kompicsbenches-exp", features = ["batch_accept"] }
-omnipaxos_core          = { git = "https://github.com/haraldng/omnipaxos" }
+#omnipaxos_core          = { git = "https://github.com/haraldng/omnipaxos" }
+#lecar                   = { git = "https://github.com/Wkkkkk/lecar" }
+regex                   = { version = "1.5", features = ["pattern"] }
+lazy_static = { version = "1.4.0" }
+
 benchmark_suite_shared 	= { path = "../shared_rust/" }
 protobuf        		= "2"
 futures         		= "0.1"
