Multi-Paxos components compile

--- a/kompact/configs/atomic_broadcast.conf
+++ b/kompact/configs/atomic_broadcast.conf
@@ -35,6 +35,22 @@ raft {
     check_quorum = false
 }
 
+multipaxos {
+    # participant params
+    timeout_delta = 2000,   # timeout_min = election_timeout - timeout_delta
+
+    # leader params
+    resend_phase1as_period = 5s
+    flush_phase2as_every_n = 1
+    noop_flush_period = 1 ms
+
+    # replica params
+    log_grow_size = 10000,
+    send_chosen_watermark_every_n_entries = 1
+    recover_log_entry_min_period = 3 s
+    recover_log_entry_min_period = 10 s
+}
+
 # assign ip to pid
 deployment {
     "10.128.0.5" = 1
